name: "xlib"
opam-version: "2.0"
maintainer: "arthur.chargueraud@inria.fr"
authors: [
  "Arthur Charguéraud <arthur.chargueraud@inria.fr>"
  "Mike Rainey <me@mike-rainey.site>"
]
homepage: "https://github.com/deepsea-inria/pbench"
dev-repo: "git+https://github.com/deepsea-inria/pbench.git"
bug-reports: "arthur.chargueraud@inria.fr"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.03" }
  "dune"
]
synopsis: "An eXtension Library"
