(executable
  (public_name prun)
  (libraries str unix pbench_xlib pbench)
  (package pbench)
)

(install
  (section doc)
  (files prun.md prun.pdf prun.html)
  (package pbench)
)

(rule
  (target prun.pdf)
  (deps prun.md)
  (action (run pandoc -s -o %{target} %{deps}))
)

(rule
  (target prun.html)
  (deps prun.md)
  (action (run pandoc --mathjax -s -o %{target} %{deps}))
)
